--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,7 +19,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
